--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.4",
     "react-icons": "^4.7.1",
+    "react-modal-image": "^2.6.0",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "swiper": "^9.1.0",
